# voxel_score

./: CMakeLists.txt  README.md  VoxelScoreConfig.cmake  VoxelScoreLibraryConfig.cmake  config.hpp.in
apps/: main.cpp
cuda/: test.cu
include/: common  model  scene  score_functor  test.cuh  test.hpp
include/impl/: common.hpp  model.hpp  scene.hpp  score_functor.hpp  timer.hpp
src/: model.cpp  pcl_point_types.def  scene.cpp  score_functor.cpp  test.cpp
