cmake_minimum_required(VERSION 3.8.0)
project(voxel_score)

set (voxel_score_VERSION_MAJOR 0)
set (voxel_score_VERSION_MINOR 1)

option(VOXEL_SCORE_PRECOMPILE_HEADERS "Precompile implementation for common point types" ON)
configure_file (
  "${PROJECT_SOURCE_DIR}/config.hpp.in"
  "${PROJECT_SOURCE_DIR}/include/config"
)

include_directories("${PROJECT_SOURCE_DIR}")
include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_SOURCE_DIR}/include")

install (DIRECTORY include/ DESTINATION include/voxel_score)

if (VOXEL_SCORE_PRECOMPILE_HEADERS)
    find_package(PCL COMPONENTS common search kdtree)
    find_package(OpenCL)
    find_package(fmt)
    file (GLOB_RECURSE obj RELATIVE "${PROJECT_SOURCE_DIR}" "src/*.cpp")
    if (PCL_FOUND AND OpenCL_FOUND)
        if(CMAKE_COMPILER_IS_GNUCXX)
            add_definitions(-fPIC)
            add_definitions(-O3)
            add_definitions(-g)
            add_definitions(-std=c++17)
            add_definitions(-Wall)
            add_definitions(-Wno-int-in-bool-context)
            add_definitions(-Wno-ignored-attributes)
            add_definitions(-DBOOST_COMPUTE_DEBUG_KERNEL_COMPILATION)
        endif()
        include_directories(${PCL_INCLUDE_DIRS})
        include_directories(${OpenCL_INCLUDE_DIRS})
        add_library(voxel_score SHARED ${obj})
        set_property(TARGET voxel_score PROPERTY CXX_STANDARD 17)
        target_link_libraries(voxel_score ${PCL_LIBRARIES} ${OpenCL_LIBRARIES} fmt::fmt "dl")
        install (TARGETS voxel_score DESTINATION lib)
    endif()
endif(VOXEL_SCORE_PRECOMPILE_HEADERS)

if (NOT WIN32)
    if (VOXEL_SCORE_PRECOMPILE_HEADERS)
        file (GLOB find_modules RELATIVE "${PROJECT_SOURCE_DIR}" "VoxelScoreLibraryConfig.cmake")
        install (FILES ${find_modules} DESTINATION share/VoxelScore RENAME "VoxelScoreConfig.cmake")
    else(VOXEL_SCORE_PRECOMPILE_HEADERS)
        file (GLOB find_modules RELATIVE "${PROJECT_SOURCE_DIR}" "VoxelScoreConfig.cmake")
        install (FILES ${find_modules} DESTINATION share/VoxelScore)
    endif(VOXEL_SCORE_PRECOMPILE_HEADERS)
endif(NOT WIN32)
